@@ -11,7 +11,7 @@ import org.springframework.web.client.RestClient;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.mreblan.textchecker.ai.YandexGptProperties;
+import com.mreblan.textchecker.config.YandexGptProperties;
 import com.mreblan.textchecker.factories.IYandexGptRequestFactory;
 import com.mreblan.textchecker.factories.impl.YandexGptRequestFactoryImpl;
 import com.mreblan.textchecker.models.Article;
@@ -29,14 +29,12 @@ import lombok.extern.slf4j.Slf4j;
 @Component
 public class YandexGptSender implements IAiSender {
 
-    private final YandexGptProperties properties;
     private final ObjectMapper objMapper;
     private final IYandexGptRequestFactory requestFactory;
     private final RestClient restClient;
 
     @Autowired
-    public YandexGptSender(YandexGptProperties props, ObjectMapper objMapper, YandexGptRequestFactoryImpl requestFactory, RestClient client) {
-        this.properties = props;
+    public YandexGptSender(ObjectMapper objMapper, YandexGptRequestFactoryImpl requestFactory, RestClient client) {
         this.objMapper = objMapper;
         this.requestFactory = requestFactory;
         this.restClient = client;
@@ -56,8 +54,9 @@ public class YandexGptSender implements IAiSender {
         log.info("MESSAGES: {}", request.getMessages().toString());
 
         // Отправляем запрос и получаем ответ, сохраняем в response
-        ResponseEntity<String> response = restClient.post().header("Authorization", String.format("Api-key %s", properties.getAPI_KEY()))
-                                                  .header("x-folder-id", properties.getFOLDER_ID())
+        ResponseEntity<String> response = restClient.post().uri(YandexGptProperties.URI)
+												  .header("Authorization", "Api-key %s".formatted(YandexGptProperties.API_KEY))
+                                                  .header("x-folder-id", YandexGptProperties.FOLDER_ID)
                                                   .contentType(MediaType.APPLICATION_JSON)
                                                   .body(request)
                                                   .retrieve()
